Added link to Strava

--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
   
   <link rel="apple-touch-icon" sizes="180x180" href="./assets/apple-icon-180x180.png">
   <link href="./assets/favicon.ico" rel="icon">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+
 
   <title>Roger's Website</title>  
 
@@ -86,7 +88,7 @@
 				<h2 class="template-title-example">Hi there!</h2>
 				<p>
 					My name is Roger Zhang. I'm currently a full time National Serviceman in the Singapore Armed Forces. In August 2025, I will start my Computer Science Degree at the National University of Singapore (NUS) School of Computing (SoC). 
-					I am passionate about Artificial Intelligence, and I aspire to utilise it to make a difference in the world. 
+					I am passionate about Artificial Intelligence, Education... and Food :D 
 				</p>
 				<p>
 					Here are my running PRs:
@@ -136,6 +138,12 @@
 					<li>
 						<span class="fa-icon">
 							<a href="https://instagram.com/roger_zhang_888" target="_blank"><i class="fa fa-instagram"></i></a>
+						</span>
+					</li>
+					<li>
+						<span class="fa-icon">
+							<a href="https://www.strava.com/athletes/73587096" target="_blank"><i class="fab fa-strava"></i>
+							</a>
 						</span>
 					</li>
 				</ul>
