Updated background image, HM PR, minor edits

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
     </div>
   </nav>
 </header>
-<div class="hero-full-container background-image-container white-text-container" style="background-image: url('./assets/images/meWithSheep.jpeg')">
+<div class="hero-full-container background-image-container white-text-container" style="background-image: url('./assets/images/meWithDeer.jpg')">
     <div class="container">
       <div class="row">
         <div class="col-xs-12">
@@ -55,7 +55,8 @@
                 <span id="typed-strings">
                   <span>Roger Zhang</span>
                   <span>a developer</span>
-                  <span>soldier by day, runner by night</span>
+                  <span>a runner </span>
+				  <span>an animal lover </span>
                   <span>an NBA Twitter, 鱼片幼面, Richard Clayderman enjoyer</span>
                 </span>
                 <span id="typed"></span>
@@ -84,23 +85,23 @@
 			<div class="template-example">
 				<h2 class="template-title-example">Hi there!</h2>
 				<p>
-					My name is Roger Zhang. I'm currently a full time National Serviceman in the Singapore Armed Forces. In August 2025, I will start my Computer Science Degree at the National University of Singapore (NUS) School of Computing (SoC). 
-					I am passionate about Artificial Intelligence, Education... and Food :D 
+					My name is Roger Zhang. I've just recently completed my full time National Service in the Singapore Armed Forces. In August 2025, I will start my Computer Science Degree at the National University of Singapore (NUS) School of Computing (SoC). 
+					I am passionate about Artificial Intelligence, Education... and Travel :D 
 				</p>
 				<p>
 					Here are my running PRs:
 					<ul style="list-style-type:none;">
 						<li>
-							2.4K 10:33
+							2.4K &nbsp&nbsp10:33
 						</li>
 						<li>
-							&nbsp 5K 25:53 
+							&nbsp 5K &nbsp&nbsp25:53 
 						</li>
 						<li>
-							&nbsp10K 58:42
+							&nbsp10K &nbsp&nbsp58:42
 						</li>
 						<li>
-							&nbsp HM Coming soon...
+							&nbsp HM 2:21:53
 						</li>
 					</ul>
 				</p>
