added Intern experience

--- a/resume.html
+++ b/resume.html
@@ -98,16 +98,32 @@
               </div>
           </div>
           <div class="row resume-row">
+            <div class="col-xs-12 col-md-5">
+                <div class="resume-logo">
+                    <img src="./assets/images/hypotenuseAI.png" alt="Hypotenuse AI logo" class="resume-photo">
+                </div>
+            </div>
+
+            <div class="col-xs-12 col-md-7">
+                <div class="template-example resume-item">
+                  <br><br>
+                    <h3>Hypotenuse AI</h3>
+                    <p>Business Development and Operations Intern | Jan 2025 - present</p>
+                </div>
+            </div>
+        </div>
+          <div class="row resume-row">
               <div class="col-xs-12 col-md-5">
                   <div class="resume-logo">
                       <img src="./assets/images/2pdfLogo.png" alt="2 PDF logo" class="resume-photo">
                   </div>
               </div>
+
               <div class="col-xs-12 col-md-7">
                   <div class="template-example resume-item">
                     <br><br>
                       <h3>HQ 2nd People's Defence Force</h3>
-                      <p>Operations Assistant | Mar 2023 - present</p>
+                      <p>Operations Assistant | Mar 2023 - Dec 2024</p>
                   </div>
               </div>
           </div>
@@ -140,7 +156,7 @@
   <div class="container">
     <div class="row">
       <div class="col-xs-12">
-        <p>© 2024 Roger Zhang</p>
+        <p>© 2025 Roger Zhang</p>
       </div>
     </div>
   </div>
