Updated 5k PR and job title

--- a/resume.html
+++ b/resume.html
@@ -108,7 +108,7 @@
                 <div class="template-example resume-item">
                   <br><br>
                     <h3>Hypotenuse AI</h3>
-                    <p>Business Development and Operations Intern | Jan 2025 - present</p>
+                    <p>Growth and Operations | Jan 2025 - present</p>
                 </div>
             </div>
         </div>
