--- a/index.html
+++ b/index.html
@@ -55,8 +55,8 @@
                 <span id="typed-strings">
                   <span>Roger Zhang</span>
                   <span>a developer</span>
-                  <span>a runner </span>
-				  <span>an animal lover </span>
+                  <span>passionate about AI</span>
+				  				<span>an animal lover </span>
                   <span>an NBA Twitter, 鱼片幼面, Richard Clayderman enjoyer</span>
                 </span>
                 <span id="typed"></span>
@@ -83,10 +83,14 @@
 		<div class="col-xs-12 col-md-7">
 
 			<div class="template-example">
-				<h2 class="template-title-example">Hi there!</h2>
+				<h2 class="template-title-example">Hi there! I'm Roger Zhang.</h2>
 				<p>
-					My name is Roger Zhang. I've just recently completed my full time National Service in the Singapore Armed Forces. In August 2025, I will start my Computer Science Degree at the National University of Singapore (NUS) School of Computing (SoC). 
-					I am passionate about Artificial Intelligence, Education... and Travel :D 
+					I'm currently working in Growth and Operations at Hypotenuse AI, an AI platform for ecommerce brands to 
+					generate product descriptions and enrich product data. This August, I’ll be starting my Computer Science 
+					degree at the National University of Singapore (NUS). 
+				</p>
+				<p>
+					Outside of work and studies, you’ll often find me travelling, running, reading, or finding good food :D
 				</p>
 				<p>
 					Here are my running PRs:
@@ -158,6 +162,9 @@
 	  <div class="row">
 		<div class="col-xs-12">
 		  <p>© 2025 Roger Zhang 
+		</div>
+		<div class="col-xs-12">
+		  <p>I'd rather be consistently good than occasionally great. 
 		</div>
 	  </div>
 	</div>
