--- a/index.html
+++ b/index.html
@@ -55,9 +55,10 @@
                 <span id="typed-strings">
                   <span>Roger Zhang</span>
                   <span>a developer</span>
-                  <span>passionate about AI</span>
-				  				<span>an animal lover </span>
-                  <span>an NBA Twitter, 鱼片幼面, Richard Clayderman enjoyer</span>
+									<span>student by day, runner by night</span>
+                  <span>a noodle enjoyer</span>
+				  				<span></span>
+                  <span>am an NBA Twitter, Letterboxd, Richard Clayderman enjoyer</span>
                 </span>
                 <span id="typed"></span>
               </h1>
@@ -85,12 +86,11 @@
 			<div class="template-example">
 				<h2 class="template-title-example">Hi there! I'm Roger Zhang.</h2>
 				<p>
-					I'm currently working in Growth and Operations at Hypotenuse AI, an AI platform for ecommerce brands to 
-					generate product descriptions and enrich product data. This August, I’ll be starting my Computer Science 
-					degree at the National University of Singapore (NUS). 
+					I'm currently an NUS Computer Science freshman, and I stay in Residential College 4. 
 				</p>
 				<p>
 					Outside of work and studies, you’ll often find me travelling, running, reading, or finding good food :D
+					P.S. I recently climbed Mount Fuji. It was shag.  
 				</p>
 				<p>
 					Here are my running PRs:
