--- a/resume.html
+++ b/resume.html
@@ -100,7 +100,7 @@
           <div class="row resume-row">
             <div class="col-xs-12 col-md-5">
                 <div class="resume-logo">
-                    <img src="./assets/images/hypotenuseAI.png" alt="Hypotenuse AI logo" class="resume-photo">
+                    <img src="./assets/images/hypotenuse_ai_logo.jpeg" alt="Hypotenuse AI logo" class="resume-photo">
                 </div>
             </div>
 
@@ -108,7 +108,7 @@
                 <div class="template-example resume-item">
                   <br><br>
                     <h3>Hypotenuse AI</h3>
-                    <p>Growth and Operations | Jan 2025 - present</p>
+                    <p>Growth and Operations | Jan 2025 - Jun 2025</p>
                 </div>
             </div>
         </div>
@@ -138,7 +138,7 @@
                     <br>
                       <h3>Singapore Physics League</h3>
                       <p>Deputy Chief Organiser | Aug 2023 - Jul 2024</p>
-                      <p>Problem Setter | Sep 2022 - present</p>
+                      <p>Problem Setter | Sep 2022 - Jul 2025</p>
                   </div>
               </div>
           </div>
@@ -148,7 +148,7 @@
 
 <p class="resume-link text-center">
   Please click 
-  <a href="assets\documents\rogerzhangxinhai_resume.pdf" target="blank">here</a> 
+  <a href="assets\documents\resume_roger_zhang" target="blank">here</a> 
   for my detailed resume &#128512
 </p>
 
