--- a/resume.html
+++ b/resume.html
@@ -148,7 +148,7 @@
 
 <p class="resume-link text-center">
   Please click 
-  <a href="assets\documents\resume_roger_zhang" target="blank">here</a> 
+  <a href="assets\documents\resume_roger_zhang.pdf" target="blank">here</a> 
   for my detailed resume &#128512
 </p>
 
