--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 									<span>student by day, runner by night</span>
                   <span>a noodle enjoyer</span>
 				  				<span></span>
-                  <span>am an NBA Twitter, Letterboxd, Richard Clayderman enjoyer</span>
+                  <span>an NBA Twitter, Letterboxd, Richard Clayderman enjoyer</span>
                 </span>
                 <span id="typed"></span>
               </h1>
