--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                   <span>a developer</span>
 									<span>student by day, runner by night</span>
                   <span>a noodle enjoyer</span>
-				  				<span></span>
+									<span>an Alcaraz fan</span>
                   <span>an NBA Twitter, Letterboxd, Richard Clayderman enjoyer</span>
                 </span>
                 <span id="typed"></span>
@@ -90,7 +90,9 @@
 				</p>
 				<p>
 					Outside of work and studies, you’ll often find me travelling, running, reading, or finding good food :D
-					P.S. I recently climbed Mount Fuji. It was shag.  
+				</p>
+				<p>
+					P.S. I recently climbed Mount Fuji. It was shag.
 				</p>
 				<p>
 					Here are my running PRs:
