--- a/resume.html
+++ b/resume.html
@@ -108,25 +108,11 @@
                 <div class="template-example resume-item">
                   <br><br>
                     <h3>Hypotenuse AI</h3>
-                    <p>Growth and Operations | Jan 2025 - Jun 2025</p>
+                    <p>Growth and Operations</p>
                 </div>
             </div>
         </div>
-          <div class="row resume-row">
-              <div class="col-xs-12 col-md-5">
-                  <div class="resume-logo">
-                      <img src="./assets/images/2pdfLogo.png" alt="2 PDF logo" class="resume-photo">
-                  </div>
-              </div>
 
-              <div class="col-xs-12 col-md-7">
-                  <div class="template-example resume-item">
-                    <br><br>
-                      <h3>HQ 2nd People's Defence Force</h3>
-                      <p>Operations Assistant | Mar 2023 - Dec 2024</p>
-                  </div>
-              </div>
-          </div>
           <div class="row resume-row">
               <div class="col-xs-12 col-md-5">
                   <div class="resume-logo">
@@ -137,8 +123,8 @@
                   <div class="template-example resume-item">
                     <br>
                       <h3>Singapore Physics League</h3>
-                      <p>Deputy Chief Organiser | Aug 2023 - Jul 2024</p>
-                      <p>Problem Setter | Sep 2022 - Jul 2025</p>
+                      <p>Deputy Chief Organiser</p>
+                      <p>Problem Setter</p>
                   </div>
               </div>
           </div>
@@ -148,7 +134,7 @@
 
 <p class="resume-link text-center">
   Please click 
-  <a href="assets\documents\resume_roger_zhang.pdf" target="blank">here</a> 
+  <a href="assets/documents/Resume_V3.pdf" target="blank">here</a> 
   for my detailed resume &#128512
 </p>
 
